# project-gh-copilot-master-template

./: .gitignore  AGENTS.md  MANIFEST.md  README.md  main.py  novo-projeto.cmd  novo-projeto.sh  pyproject.toml
.github/workflows/: validate.yml
docs/: 00-como-usar-template.md  01-estrategia-token-contexto.md  02-subagents.md  03-referencias.md  04-criando-um-profile.md  05-arquitetura.md
packs/arcgis-arcpy/: pack.toml
packs/arcgis-arcpy/github/agents/: arcgis-arcpy-specialist.agent.md
packs/arcgis-arcpy/github/instructions/: arcgis-arcpy.instructions.md
packs/arcgis-arcpy/project/: .env.example  README.md
packs/common/: pack.toml
packs/common/github/: copilot-instructions.md  pull_request_template.md
packs/common/project/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md
packs/data-engineering/: pack.toml
packs/databricks/: pack.toml
packs/databricks/project/: databricks.yml
packs/excel/: pack.toml
packs/excel/project/: pyproject.toml
packs/excel/project/excel/: README.md
packs/excel/project/src/nome_pacote/: excel_pipeline.py
packs/excel/project/tests/: test_excel_pipeline.py
packs/pandas/: pack.toml
packs/pandas/project/: pyproject.toml
packs/pandas/project/pandas/: README.md
packs/powerpoint/: pack.toml
packs/pyspark/: pack.toml
packs/pyspark/project/: pyproject.toml
packs/python/: pack.toml
packs/python/project/: Makefile  pyproject.toml
packs/python/project/src/nome_pacote/: __main__.py  main.py
packs/python/project/tests/: test_main.py
packs/sas/: pack.toml
packs/sql/: pack.toml
packs/sql-hive/: pack.toml
packs/sql-oracle/: pack.toml
packs/sql-sqlserver/: pack.toml
packs/sql-teradata/: pack.toml
packs/streamlit/: pack.toml
packs/web-scraping/: pack.toml
packs/web-scraping/project/: pyproject.toml
profiles/: arcgis-arcpy.toml  common.toml  data-engineering.toml  databricks.toml  excel.toml  hive-pyspark.toml  hive.toml  oracle.toml  pandas.toml  powerpoint.toml  pyspark.toml  python-minimal.toml  python.toml  sas.toml  sql.toml  sqlserver.toml  streamlit.toml  teradata-pandas.toml  teradata.toml  web-scraping.toml
scripts/: _template_lib.py  new_project.py  new_theme.py  validate.py
(+118 files in other folders)
