[project]
name = "nome-projeto"
version = "0.1.0"
description = "Descrição curta do projeto"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # __PACK_DEPENDENCIES__
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
# __PACK_DEPENDENCY_GROUPS__

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nome_pacote"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
